# rusty-renderer

./: Cargo.toml  LICENSE  README.md
src/: main.rs  transform.rs
src/shadersrc/: basic.wgsl
