[package]
name = "RustyRenderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24.0.1"
winit = "0.29.0"
pollster = "0.3.0"
log = "0.4"
env_logger = "0.10.0"
wasm-bindgen = "0.2.100"
bytemuck = { version = "1.21.0" , features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
